--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/Index.cshtml
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/Index.cshtml
@@ -110,6 +110,8 @@
                 </tr>
             </thead>
             <tbody></tbody>
+            <a href="@Url.Action("GenerarReportePDF2", "Carro")" class="btn btn-primary">Generar Reporte</a>
+
         </table>
     </div>
 
