Update Mantenimiento y Ordenamiento de vistas

--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/Index.cshtml
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 
     <style>
         body {
-            background-color: #00c0f3;
+            background-color: #5589c4;
         }
 
         table {
