--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Content/css/About.css
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Content/css/About.css
@@ -6,12 +6,14 @@ body {
     overflow-y: scroll;
 }
 
+
+
 /* Navbar */
 
 .navbar {
     display: flex;
     justify-content: center;
-    background-color: #005da4;
+    background-color: #336ca5;
     padding: 10px;
 }
 
