--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Content/css/Contact.css
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Content/css/Contact.css
@@ -11,7 +11,7 @@ body {
 .navbar {
     display: flex;
     justify-content: center;
-    background-color: #005da4;
+    background-color: #336ca5;
     padding: 10px;
 }
 
