--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Content/css/Index.css
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Content/css/Index.css
@@ -5,7 +5,7 @@
 .navbar {
     display: flex;
     justify-content: center;
-    background-color: #005da4;
+    background-color: #336ca5;
     padding: 10px;
 }
 
