--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Acceso/Login.cshtml
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Acceso/Login.cshtml
@@ -28,7 +28,7 @@
         }
 
         body {
-            background-color: #080710;
+            background-color: #5589c4;
         }
 
         .background {
