--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/About.cshtml
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/About.cshtml
@@ -23,7 +23,7 @@
 
     <style>
         body {
-            background-color: #00c0f3;
+            background-color: #5589c4;
         }
 
         table {
@@ -41,20 +41,20 @@
         <a href="@Url.Content("~/Home/Contact")" class="nav-item nav-link">Reports</a>
     </nav>
 
-    <div class="container">
-        <table id="tablaUsuarios" class="table table-striped table-bordered">
-            <thead class="table-white">
-                <tr>
-                    <th>Correo</th>
-                    <th>Clave</th>
-                    <th>Tipo</th>
-                    <th>Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </div>
+    @*<div class="container">
+            <table id="tablaUsuarios" class="table table-striped table-bordered">
+                <thead class="table-white">
+                    <tr>
+                        <th>Correo</th>
+                        <th>Clave</th>
+                        <th>Tipo</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>*@
 
     <div id="formContainer" class="container" style="display: none;">
         <h2>Actualizar Usuario</h2>
@@ -99,74 +99,192 @@
         </form>
     </div>
 
+    <div class="container">
+        <h1>Ventas</h1>
+        <table class="table" id="tablaVentas">
+            <thead>
+                <tr>
+                    <th>Cliente</th>
+                    <th>Vehículo</th>
+                    <th>Precio de Venta</th>
+                    <th>Fecha de Venta</th>
+                    <th>Cantidad</th>
+                    <th>Usuario Que Realizo La Venta</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 
-    <script src="site.js"></script>
-    <script src="jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script src="script.js"></script>
+    <div class="container">
+        <h1>Historial de compras</h1>
+        <table class="table" id="tablaVentasPorCliente">
+            <thead>
+                <tr>
+                    <th>Cliente</th>
+                    <th>Vehículo</th>
+                    <th>Fecha de Venta</th>
+                    <th>Precio de Venta</th>
+                    <th>Cantidad</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 
-    <footer>
-        <div class="footer-top">
-            <div class="container">
-                <div class="col-lg-2 col-xs-12 text-center">
-                    <a href="#"><i class="fa fa-facebook fa-2x"></i>Facebook</a>
+
+    <div class="container">
+        <div>
+            <h2>Registrar Servicio</h2>
+            <form action="@Url.Action("AgregarServicioMantenimiento", "Carro")" method="post">
+                <div>
+                    <label for="vehiculo">Vehículo:</label>
+                    <select id="VehiculoID2" name="IdVehiculo" required></select>
                 </div>
-                <div class="col-lg-2 col-xs-12 text-center">
-                    <a href="#"><i class="fa fa-twitter fa-2x"></i>Twitter</a>
+                <div>
+                    <label for="cantidad">Tipo de mantenimiento</label>
+                    <select id="TipoMantenimiento" name="IdTipoMantenimiento" required></select>
                 </div>
-                <div class="col-lg-2 col-xs-12 text-center">
-                    <a href="#"><i class="fa fa-flickr fa-2x"></i>Flickr</a>
+                <div>
+                    <label for="descripcion">Descripción:</label>
+                    <textarea id="descripcion" name="Descripcion" placeholder="Ingrese una descripción"></textarea>
                 </div>
-                <div class="col-lg-2 col-xs-12 text-center">
-                    <a href="#"><i class="fa fa-tumblr fa-2x"></i>Tumblr</a>
-                </div>
-                <div class="col-lg-2 col-xs-12 text-center">
-                    <a href="#"><i class="fa fa-github fa-2x"></i>Github</a>
-                </div>
-                <div class="col-lg-2 col-xs-12 text-center">
-                    <a href="#"><i class="fa fa-google-plus fa-2x"></i>Google</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="container" style="border-top:1px solid grey;">
-            <div class="row text-center">
-                <div class="col-lg-6 col-lg-offset-3">
-                    <ul class="menu">
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-
-                        <li>
-                            <a href="#">About</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Blog</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Gallery</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-
-    <div class="container text-center">
-        <!-- Agrega la clase "text-center" para centrar el contenido -->
-        <div class="row">
-            <div class="col-lg-12">
-                <p>Copyright © 2023 All rights reserved</p>
-            </div>
+                <button type="button" id="botonActualizar2" style="display: none;">Actualizar</button>
+                <button type="submit">Agregar</button>
+            </form>
         </div>
     </div>
+
+    <div class="container">
+        <h1>Servicios de Mantenimiento</h1>
+        <table class="table" id="tablaServiciosMantenimiento">
+            <thead>
+                <tr>
+                    <th>Usuario</th>
+                    <th>Vehículo</th>
+                    <th>Precio</th>
+                    <th>Descripción</th>
+                    <th>Tipo de Mantenimiento</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
+
+
+    <div class="container">
+        <div>
+            <h2>Registrar Servicio de Repuesto</h2>
+            <form action="@Url.Action("AgregarServicioRepuesto", "Carro")" method="post">
+                <div>
+                    <label for="vehiculo">Vehículo:</label>
+                    <select id="VehiculoID3" name="IdVehiculo" required>
+                        <!-- Aquí puedes cargar dinámicamente las opciones del select con los vehículos disponibles -->
+                    </select>
+                </div>
+                <div>
+                    <label for="tipoRepuesto">Tipo de repuesto:</label>
+                    <select id="TipoRepuesto" name="IdTipoRepuesto" required>
+                        <!-- Aquí puedes cargar dinámicamente las opciones del select con los tipos de repuesto disponibles -->
+                    </select>
+                </div>
+                <div>
+                    <label for="descripcion">Descripción:</label>
+                    <textarea id="2descripcion" name="Descripcion" placeholder="Ingrese una descripción"></textarea>
+                </div>
+                <button type="button" id="botonActualizar" style="display: none;">Actualizar</button>
+                <button type="submit">Agregar</button>
+            </form>
+        </div>
+    </div>
+
+        <div class="container">
+            <h1>Servicios de Repuestos</h1>
+            <table class="table" id="tablaServiciosRepuestos">
+                <thead>
+                    <tr>
+                        <th>Usuario</th>
+                        <th>Vehículo</th>
+                        <th>Precio</th>
+                        <th>Descripción</th>
+                        <th>Tipo de Repuesto</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+
+
+        <script src="site.js"></script>
+        <script src="jquery.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+        <script src="script.js"></script>
+
+        <footer>
+            <div class="footer-top">
+                <div class="container">
+                    <div class="col-lg-2 col-xs-12 text-center">
+                        <a href="#"><i class="fa fa-facebook fa-2x"></i>Facebook</a>
+                    </div>
+                    <div class="col-lg-2 col-xs-12 text-center">
+                        <a href="#"><i class="fa fa-twitter fa-2x"></i>Twitter</a>
+                    </div>
+                    <div class="col-lg-2 col-xs-12 text-center">
+                        <a href="#"><i class="fa fa-flickr fa-2x"></i>Flickr</a>
+                    </div>
+                    <div class="col-lg-2 col-xs-12 text-center">
+                        <a href="#"><i class="fa fa-tumblr fa-2x"></i>Tumblr</a>
+                    </div>
+                    <div class="col-lg-2 col-xs-12 text-center">
+                        <a href="#"><i class="fa fa-github fa-2x"></i>Github</a>
+                    </div>
+                    <div class="col-lg-2 col-xs-12 text-center">
+                        <a href="#"><i class="fa fa-google-plus fa-2x"></i>Google</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container" style="border-top:1px solid grey;">
+                <div class="row text-center">
+                    <div class="col-lg-6 col-lg-offset-3">
+                        <ul class="menu">
+                            <li>
+                                <a href="#">Home</a>
+                            </li>
+
+                            <li>
+                                <a href="#">About</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Blog</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Gallery</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+
+        <div class="container text-center">
+            <!-- Agrega la clase "text-center" para centrar el contenido -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright © 2023 All rights reserved</p>
+                </div>
+            </div>
+        </div>
 
 
 </body>
