--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/Contact.cshtml
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/Contact.cshtml
@@ -35,7 +35,7 @@
 
     <style>
         body {
-            background-color: #00c0f3;
+            background-color: #5589c4;
         }
 
         table {
@@ -125,25 +125,6 @@
 
 
         <div class="container">
-            <h1>Ventas</h1>
-            <table class="table" id="tablaVentas">
-                <thead>
-                    <tr>
-                        <th>Cliente</th>
-                        <th>Vehículo</th>
-                        <th>Precio de Venta</th>
-                        <th>Fecha de Venta</th>
-                        <th>Cantidad</th>
-                        <th>Usuario Que Realizo La Venta</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </div>
-
-
-        <div class="container">
             <h1>Inventario</h1>
             <table class="table" id="tablaInventario">
                 <thead>
@@ -158,104 +139,6 @@
                 <tbody></tbody>
             </table>
         </div>
-
-
-        <div class="container">
-            <h1>Historial de compras</h1>
-            <table class="table" id="tablaVentasPorCliente">
-                <thead>
-                    <tr>
-                        <th>Cliente</th>
-                        <th>Vehículo</th>
-                        <th>Fecha de Venta</th>
-                        <th>Precio de Venta</th>
-                        <th>Cantidad</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </div>
-
-        <div class="container">
-            <h1>Servicios de Mantenimiento</h1>
-            <table class="table" id="tablaServiciosMantenimiento">
-                <thead>
-                    <tr>
-                        <th>Usuario</th>
-                        <th>Vehículo</th>
-                        <th>Precio</th>
-                        <th>Descripción</th>
-                        <th>Tipo de Mantenimiento</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </div>
-
-
-        <div>
-            <h2>Registrar Servicio</h2>
-            <form action="@Url.Action("AgregarServicioMantenimiento", "Carro")" method="post">
-                <div>
-                    <label for="vehiculo">Vehículo:</label>
-                    <select id="VehiculoID2" name="IdVehiculo" required></select>
-                </div>
-                <div>
-                    <label for="cantidad">Tipo de mantenimiento</label>
-                    <select id="TipoMantenimiento" name="IdTipoMantenimiento" required></select>
-                </div>
-                <div>
-                    <label for="descripcion">Descripción:</label>
-                    <textarea id="descripcion" name="Descripcion" placeholder="Ingrese una descripción"></textarea>
-                </div>
-                <button type="submit">Agregar</button>
-            </form>
-        </div>
-
-
-        <div>
-            <h2>Registrar Servicio de Repuesto</h2>
-            <form action="@Url.Action("AgregarServicioRepuesto", "Carro")" method="post">
-                <div>
-                    <label for="vehiculo">Vehículo:</label>
-                    <select id="VehiculoID3" name="IdVehiculo" required>
-                        <!-- Aquí puedes cargar dinámicamente las opciones del select con los vehículos disponibles -->
-                    </select>
-                </div>
-                <div>
-                    <label for="tipoRepuesto">Tipo de repuesto:</label>
-                    <select id="TipoRepuesto" name="IdTipoRepuesto" required>
-                        <!-- Aquí puedes cargar dinámicamente las opciones del select con los tipos de repuesto disponibles -->
-                    </select>
-                </div>
-                <div>
-                    <label for="descripcion">Descripción:</label>
-                    <textarea id="2descripcion" name="Descripcion" placeholder="Ingrese una descripción"></textarea>
-                </div>
-                <button type="button" id="botonActualizar" style="display: none;">Actualizar</button>
-                <button type="submit">Agregar</button>
-            </form>
-        </div>
-
-        <div class="container">
-            <h1>Servicios de Repuestos</h1>
-            <table class="table" id="tablaServiciosRepuestos">
-                <thead>
-                    <tr>
-                        <th>Usuario</th>
-                        <th>Vehículo</th>
-                        <th>Precio</th>
-                        <th>Descripción</th>
-                        <th>Tipo de Repuesto</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </div>
-
-
 
 
         <script src="/Content/images/site.js"></script>
