--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/About.cshtml
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/About.cshtml
@@ -41,38 +41,39 @@
         <a href="@Url.Content("~/Home/Contact")" class="nav-item nav-link">Reports</a>
     </nav>
 
-    @*<div class="container">
-            <table id="tablaUsuarios" class="table table-striped table-bordered">
-                <thead class="table-white">
-                    <tr>
-                        <th>Correo</th>
-                        <th>Clave</th>
-                        <th>Tipo</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>*@
+    <div class="container">
+        <form action="@Url.Action("Registrar2","Acceso")" method="post">
+            <h3>Register personas de ventas</h3>
 
-    <div id="formContainer" class="container" style="display: none;">
-        <h2>Actualizar Usuario</h2>
-        <form id="updateForm">
-            <div class="form-group">
-                <label for="correo">Correo:</label>
-                <input type="email" class="form-control" id="correo" required>
+            <div class="form-group row">
+                <label for="Correo" class="col-sm-2 col-form-label">Correo</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="Correo" name="Correo" placeholder="Correo" required>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="clave">Clave:</label>
-                <input type="password" class="form-control" id="clave" required>
+
+            <div class="form-group row">
+                <label for="Clave" class="col-sm-2 col-form-label">Contraseña</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="Clave" name="Clave" placeholder="Contraseña" required>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="tipo">Tipo:</label>
-                <input type="text" class="form-control" id="tipo" required>
+
+            <div class="form-group row">
+                <label for="ConfirmarClave" class="col-sm-2 col-form-label">Confirmar Contraseña</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="ConfirmarClave" name="ConfirmarClave" placeholder="Confirmar Contraseña" required>
+                </div>
             </div>
-            <button type="button" class="btn btn-primary" id="updateButton">Actualizar</button>
-            <button type="button" class="btn btn-danger" id="deleteButton">Eliminar</button>
+
+            @if (ViewData["Mensaje"] != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @ViewData["Mensaje"]
+                </div>
+            }
+
+            <button type="submit" name="button">Log In</button>
         </form>
     </div>
 
@@ -98,6 +99,8 @@
             <button type="submit" class="btn btn-primary">Agregar Venta</button>
         </form>
     </div>
+
+
 
     <div class="container">
         <h1>Ventas</h1>
@@ -316,14 +319,6 @@
                     const correoCell = document.createElement('td');
                     correoCell.textContent = usuario.Correo;
                     row.appendChild(correoCell);
-
-                    const claveCell = document.createElement('td');
-                    claveCell.textContent = usuario.Clave;
-                    row.appendChild(claveCell);
-
-                    const tipoCell = document.createElement('td');
-                    tipoCell.textContent = usuario.Tipo;
-                    row.appendChild(tipoCell);
 
                     const accionesCell = document.createElement('td');
                     const updateButton = document.createElement('button');
