--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/Contact.cshtml
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/Contact.cshtml
@@ -103,13 +103,29 @@
                     <label for="precio">Precio:</label>
                     <input type="number" id="precio" name="Precio" placeholder="Ingrese el precio del vehículo" required>
                 </div>
+                <button type="button" id="botonActualizar4" style="display: none;">Actualizar</button>
                 <button type="submit">Registrar</button>
             </form>
         </div>
 
+        <div class="container">
+            <h1>Vehiculos</h1>
+            <table class="table" id="tablaVehiculos">
+                <thead>
+                    <tr>
+                        <th>Nombre del Vehículo</th>
+                        <th>Tipo de Vehículo</th>
+                        <th>Precio</th>
+                        <th>Update</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+
 
         <div>
-            <h2>Actualizar inventario</h2>
+            <h2>Añadir inventario</h2>
             <form action="@Url.Action("RegistrarInventario", "Carro")" method="post">
                 <div>
                     <label for="vehiculo">Vehículo:</label>
@@ -119,7 +135,8 @@
                     <label for="cantidad">Cantidad disponible:</label>
                     <input type="number" id="cantidad" name="CantidadDisponible" placeholder="Ingrese la cantidad disponible" required>
                 </div>
-                <button type="submit">Actualizar</button>
+                <button type="button" id="botonActualizar3" style="display: none;">Actualizar</button>
+                <button type="submit">Agregar</button>
             </form>
         </div>
 
