--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Acceso/Login.cshtml
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Acceso/Login.cshtml
@@ -7,7 +7,7 @@
 
 <html>
 <head>
-    <title>My Awesome Login Page</title>
+    <title>Proyecto Bases</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
@@ -27,6 +27,11 @@
             box-sizing: border-box;
         }
 
+        html {
+            background-color: #336ca5;
+        }
+
+
         body {
             background-color: #5589c4;
         }
@@ -38,6 +43,7 @@
             transform: translate(-50%,-50%);
             left: 50%;
             top: 50%;
+            background-color: #5589c4;
         }
 
             .background .shape {
@@ -62,7 +68,7 @@
         form {
             height: 600px;
             width: 400px;
-            background-color: rgba(255,255,255,0.13);
+            background-color: #5589c4;
             position: absolute;
             transform: translate(-50%,-50%);
             top: 50%;
@@ -161,13 +167,13 @@
         <div class="shape"></div>
     </div>
     <form action="@Url.Action("Login","Acceso")" method="post">
-        <h3>Login Here</h3>
+        <h3>Inicio de Sesión</h3>
 
         <label for="Correo">Correo</label>
         <input type="text" name="Correo" value="" placeholder="Correo">
 
-        <label for="Clave">Password</label>
-        <input type="password" name="Clave" value="" placeholder="Contraseña">
+        <label for="Clave">Contraseña</label>
+        <input type="password" name="Clave" value="" placeholder="Contraseña" required>
 
         @if (ViewData["Mensaje"] != null)
         {
@@ -176,7 +182,7 @@
             </div>
         }
 
-        <button type="submit" name="button">Log In</button>
+        <button type="submit" name="button">iniciar Sesión</button>
         <div class="social">
             <div class="go"><i class="fab fa-user"><a href="@Url.Action("Registrar","Acceso")">Registrarse</a></i></div>
         </div>
