--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Acceso/Registrar.cshtml
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Acceso/Registrar.cshtml
@@ -7,7 +7,7 @@
 
 <html>
 <head>
-    <title>Lab 3</title>
+    <title>Proyecto Bases</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
@@ -30,6 +30,10 @@
             background-color: #080710;
         }
 
+        html {
+            background-color: #336ca5;
+        }
+
         .background {
             width: 430px;
             height: 520px;
@@ -37,6 +41,7 @@
             transform: translate(-50%,-50%);
             left: 50%;
             top: 50%;
+            background-color: #5589c4;
         }
 
             .background .shape {
@@ -44,6 +49,7 @@
                 width: 200px;
                 position: absolute;
                 border-radius: 50%;
+                background-color: #5589c4;
             }
 
         .shape:first-child {
@@ -61,7 +67,7 @@
         form {
             height: 700px;
             width: 400px;
-            background-color: rgba(255,255,255,0.13);
+            background-color: #5589c4;
             position: absolute;
             transform: translate(-50%,-50%);
             top: 50%;
@@ -159,7 +165,7 @@
         <div class="shape"></div>
     </div>
     <form action="@Url.Action("Registrar","Acceso")" method="post">
-        <h3>Register Here</h3>
+        <h3>Registrarse</h3>
 
         <label for="Correo">Correo</label>
         <input type="text" name="Correo" value="" placeholder="Correo">
@@ -177,9 +183,9 @@
             </div>
         }
 
-        <button type="submit" name="button">Log In</button>
+        <button type="submit" name="button">Registrarse</button>
         <div class="social">
-            <div class="go"><i class="fab fa-user"><a href="@Url.Action("Login","Acceso")">Iniciar Sesion</a></i></div>
+            <div class="go"><i class="fab fa-user"><a href="@Url.Action("Login","Acceso")">Iniciar Sesión</a></i></div>
         </div>
     </form>
 
