--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/Index.cshtml
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/Index.cshtml
@@ -35,13 +35,17 @@
 </head>
 <body>
     <nav class="navbar justify-content-center">
-        <a href="#" class="nav-item nav-link active">Home</a>
-        <a href="#" class="nav-item nav-link">Profile</a>
+        <a href="#" class="nav-item nav-link active">Inicio</a>
+        <a href="#" class="nav-item nav-link">Perfil</a>
         <a href="@Url.Action("CerrarSesion", "Home")" class="nav-item nav-link">Salir</a>
-        <a href="@Url.Content("~/Home/Contact")" class="nav-item nav-link">Reports</a>
+        <a href="@Url.Content("~/Home/Contact")" class="nav-item nav-link">Reportes</a>
     </nav>
 
-    
+
+    <div class="container">
+        <label for="datos">Datos Personales</label>
+    </div>
+
 
     <div class="container">
         <table id="tablaUsuarios" class="table table-striped table-bordered">
@@ -141,11 +145,11 @@
                 <div class="col-lg-6 col-lg-offset-3">
                     <ul class="menu">
                         <li>
-                            <a href="#">Home</a>
+                            <a href="#">Incio</a>
                         </li>
 
                         <li>
-                            <a href="#">About</a>
+                            <a href="#">Acerca</a>
                         </li>
 
                         <li>
@@ -153,11 +157,11 @@
                         </li>
 
                         <li>
-                            <a href="#">Gallery</a>
+                            <a href="#">Galeria</a>
                         </li>
 
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="#">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -253,7 +257,7 @@
 
         const updatedCorreo = correoInput.value;
         const updatedClave = claveInput.value;
-        
+
 
         fetch('/Acceso/UpdateUsuario', {
             method: 'POST',
